--- a/src/TodoForm.css
+++ b/src/TodoForm.css
@@ -10,7 +10,7 @@
     width:100%;
     height:100px;
     margin-top:40px;
-    background:#208bda;
+    background:#f0f0f0;
 }
 
 .submitBtn{
@@ -84,6 +84,6 @@ input{
     border: none;
     padding: 20px;
     border-radius: 5px;
-    background:wheat;
-    color:#6b3c00;
+    color:gray;
+    
 }
